# ecs

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  environment.yaml  pyproject.toml  setup.py
ecs/: ecs.py  mutable_ecs.py
ecs_cpp/python_bindings/: ecs_cpp.cpp  mutable_ecs.cpp
ecs_cpp/src/ecs/: mutable_ecs.hpp  time_utils.hpp  type_utils.hpp  variant_utils.hpp
ecs_cpp/tests/: test_mutable_ecs.cpp
tools/: run_linters_and_formatters.sh
unit_tests/: test_ecs.py  test_mutable_ecs.py  test_mutable_ecs_cpp.py
